[package]
name = "bloomserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
serde = { version = "1.0.138", features = ["serde_derive"] }
tch = { git = "https://github.com/Narsil/tch-rs", branch="support_optional_baddbmm_args" }
tokenizers = "0.11.3"
tokio = { version = "1.19.2", features = ["sync"] }
safetensors = { git = "https://github.com/Narsil/safetensors" }
memmap = "0.7.0"
serde_json = "1.0.82"
thiserror = "1.0.31"
futures = "0.3.21"
crossbeam-channel = "0.5.5"

[dev-dependencies]
once_cell = "1.13"
